refactor: introduce LocalizedException interface to unify i18n-aware exception catches